fix: upgrade attendance api
