# server/server/src/api/attendanceController.ts
@@ -1,8 +1,9 @@
 import {inject} from 'inversify';
-import {Body, Path, Put, Route, Tags} from 'tsoa';
+import {Body, Get, Path, Put, Route, Tags} from 'tsoa';
 import {Controller} from '../controller';
 import {AttendanceBackendAdapter} from '../domain/attendance-backend-adapter';
 import {AttendancePayload} from '../interfaces/attendance';
+import {IStudentAttendanceRecord} from '../interfaces/student';
 import {provideSingleton} from '../ioc';
 
 @Route('attendance')
@@ -16,7 +17,12 @@ export class AttendanceController extends Controller implements AttendanceBacken
   }
 
   @Put('student/{id}')
-  setStudentsAttendance(@Path() id: string, @Body() data: AttendancePayload): Promise<boolean> {
-    return this.backendAdapter.setStudentsAttendance(id, data);
+  setStudentAttendance(@Path() id: string, @Body() data: AttendancePayload): Promise<boolean> {
+    return this.backendAdapter.setStudentAttendance(id, data);
+  }
+
+  @Get('student/{id}')
+  getStudentAttendance(id: string): Promise<IStudentAttendanceRecord[]> {
+    return this.backendAdapter.getStudentAttendance(id);
   }
 }
