# server/server/src/domain/attendance-backend-adapter.ts
@@ -1,5 +1,7 @@
 import {AttendancePayload} from '../interfaces/attendance';
+import {IStudentAttendanceRecord} from '../interfaces/student';
 
 export abstract class AttendanceBackendAdapter {
-  abstract setStudentsAttendance(id: string, data: AttendancePayload): Promise<boolean>;
+  abstract setStudentAttendance(id: string, data: AttendancePayload): Promise<boolean>;
+  abstract getStudentAttendance(id: string): Promise<IStudentAttendanceRecord[]>;
 }
