# server/server/src/infrastructure/attendance-backend-adapter.ts
@@ -1,5 +1,6 @@
 import {format} from 'date-fns';
 import {inject, injectable} from 'inversify';
+import {IStudentAttendanceRecord} from 'src/interfaces/student';
 import {AttendanceBackendAdapter} from '../domain/attendance-backend-adapter';
 import {ATTENDANCE_COLLECTION} from '../domain/collections';
 import {DBFilterOperator, FirebaseDB} from '../domain/db';
@@ -11,14 +12,14 @@ import {provideTransient} from '../ioc';
 export class AttendanceBackendAdapterImpl implements AttendanceBackendAdapter {
   constructor(@inject(FirebaseDB) protected db: FirebaseDB) {}
 
-  async setStudentsAttendance(id: string, data: AttendancePayload): Promise<boolean> {
+  async setStudentAttendance(id: string, data: AttendancePayload): Promise<boolean> {
     const document = await this.db.findDocument<AttendanceRecord>(ATTENDANCE_COLLECTION, [
       {field: 'date', operator: DBFilterOperator.equals, value: format(data.date, 'yyyy-MM-dd')},
     ]);
     if (document) {
       let present = document.presentStudents.filter(sId => sId != id);
       let absents = document.absentStudents.filter(sId => sId != id);
-      if (data.attendance) present = [...present, id];
+      if (data.present) present = [...present, id];
       else absents = [...absents, id];
       await this.db.updateDocument(ATTENDANCE_COLLECTION, document?.id as string, {
         ...document,
@@ -28,9 +29,21 @@ export class AttendanceBackendAdapterImpl implements AttendanceBackendAdapter {
     } else
       await this.db.addDocument<AttendanceRecord>(ATTENDANCE_COLLECTION, {
         date: format(data.date, 'yyyy-MM-dd'),
-        absentStudents: !data.attendance ? [id] : [],
-        presentStudents: data.attendance ? [id] : [],
+        absentStudents: !data.present ? [id] : [],
+        presentStudents: data.present ? [id] : [],
       });
     return Promise.resolve(true);
+  }
+
+  async getStudentAttendance(id: string): Promise<IStudentAttendanceRecord[]> {
+    const attendances = await this.db.getCollection<AttendanceRecord>(ATTENDANCE_COLLECTION);
+    const studentRecords = attendances.filter(
+      a => a.absentStudents.includes(id) || a.presentStudents.includes(id)
+    );
+    return studentRecords?.reduce<IStudentAttendanceRecord[]>(
+      (att, r) =>
+        att.concat({date: new Date(r.date as string), present: r.presentStudents.includes(id)}),
+      []
+    );
   }
 }
